--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <div class="main-nav">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
           <div class="container">
-            <a class="navbar-brand" routerLink="/home">
+            <a class="navbar-brand" routerLink="/">
               <div style="display: flex; align-items: center;">
                 <!-- <img src="/images/Home/travel_logo2.png" width="70" height="50" class="d-inline-block align-top" alt="TravelCation logo" /> -->
                 <a class="nav-link text-white pl-3" routerLink="/" style="font-weight: bold;">TravelCation</a>
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/home">Home</a>
+                  <a class="nav-link" routerLink="/">Home</a>
                 </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/destination">Destination</a>
