--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,22 +17,22 @@
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/">Home</a>
                 </li>
-                  <li class="nav-item">
+                  <li *ngIf="isLoggedIn" class="nav-item">
                     <a class="nav-link" routerLink="/destination">Destination</a>
                   </li>
-                  <li class="nav-item">
+                  <li *ngIf="isLoggedIn" class="nav-item">
                     <a class="nav-link" routerLink="/Blogs">Blogs</a>
                   </li>
                   <li *ngIf="isLoggedIn" class="nav-item">
                     <a class="nav-link" routerLink="/BlogForm">BlogForm</a>
                   </li>
-                  <li class="nav-item">
+                  <li *ngIf="isLoggedIn" class="nav-item">
                     <a class="nav-link" routerLink="/history">History</a>
                   </li>
-                  <li class="nav-item">
+                  <li *ngIf="isLoggedIn" class="nav-item">
                     <a class="nav-link" routerLink="/contactus">Contactus</a>
                   </li>
-                  <li class="nav-item">
+                  <li *ngIf="isLoggedIn" class="nav-item">
                     <a class="nav-link" routerLink="/Payment">Payment</a>
                   </li>
                   <li *ngIf="!isLoggedIn" class="nav-item">
